--- a/index.html
+++ b/index.html
@@ -3,9 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Dice Roller </title>
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+<body> 
+    <!-- Nav section stars from here -->
+    <nav>
+
+        <!-- Nav top ssection stars from here -->
+       <div class="top-section">
+        <img src="assets/location.svg" alt="" srcset="">
+        <p>Allow location acess for local store menu and promos</p>
+        <button>Set Location</button>
+       </div>
+       <!-- Nav top section ends here -->
+       <hr>
+       <!-- Nav bottom section stars from here -->
+       <div class="bottom-section">
+        <div class="left-section">
+            <img src="assets/logo.svg" alt="">
+            <div>
+                <p><a href="">Menu</a></p>
+                <p><a href="">Deals</a></p>
+            </div>
+        </div>
+        <div class="right-section">
+            <img class="person" src="assets/Account_Icon.svg" alt=""> 
+            <p class="sign-in"><a href="">Sign In</a></p>
+            <div class="border-vertical"></div>
+            <p class="rupee">₹0</p>
+            <img class="buket" src="assets/buket.svg" alt="">
+            <p class="zero">0</p>
+        </div>
+       </div>
+       <!-- Nav bottom ends here -->
+    </nav>
+    <!-- Nav Section ends here -->
+
+    <header>
+        <div class="order-reminder">
+            <h4>LET'S ORDER FOR DELIVERY, PICK UP, OR DINE-IN</h4>
+            <button>Start Order</button>
+        </div>
+        <div class="banner">
+            <img src="assets/banner.jpg" alt="">
+        </div>
+    </header>
+    <!-- Header Section ends here -->
+
+    <!-- Content Section stars here -->
+    <section>
+        <div class="category">
+            <h1>BROWSE CATEGORIES</h1>
+            <div class="line"></div>
+        </div>
+        <div class="images">
+            <div class="card">
+                <img src="https://orderserv-kfc-assets.yum.com/15895bb59f7b4bb588ee933f8cd5344a/images/categories/CAT289.jpg?ver=48.12">
+                <h3>INTERNATIONAL BURGER FEST</h3>
+            </div>
+            <div class="card">
+                <img src="https://orderserv-kfc-assets.yum.com/15895bb59f7b4bb588ee933f8cd5344a/images/categories/CAT289.jpg?ver=48.12">
+                <h3>INTERNATIONAL BURGER FEST</h3>
+            </div>
+            <div class="card">
+                <img src="https://orderserv-kfc-assets.yum.com/15895bb59f7b4bb588ee933f8cd5344a/images/categories/CAT289.jpg?ver=48.12">
+                <h3>INTERNATIONAL BURGER FEST</h3>
+            </div>
+            <div class="card">
+                <img src="https://orderserv-kfc-assets.yum.com/15895bb59f7b4bb588ee933f8cd5344a/images/categories/CAT289.jpg?ver=48.12">
+                <h3>INTERNATIONAL BURGER FEST</h3>
+            </div>
+            <div class="card">
+                <img src="https://orderserv-kfc-assets.yum.com/15895bb59f7b4bb588ee933f8cd5344a/images/categories/CAT289.jpg?ver=48.12">
+                <h3>INTERNATIONAL BURGER FEST</h3>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
